All the changes are made here

--- a/web/index.html
+++ b/web/index.html
@@ -3,12 +3,12 @@
 <head>
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
-  <meta name="description" content="A new Flutter application.">
+  <meta name="description" content="This is a New Website of Flutter India Conference 2020.FlutterCon India is an online event driven by Indian Flutter Communities to gather all Flutter passionates and learn to create beautiful apps! Our goal is to share Flutter knowledge, improve Flutter skills, and expand the Flutter community.  The 1st edition of FlutterCon India will take place on May 1-3, 2020.  Best-in-class speakers from Flutter community around the globe will be presenting live on various Flutter topics.">
 
   <!-- iOS meta tags & icons -->
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
-  <meta name="apple-mobile-web-app-title" content="fluttercon">
+  <meta name="apple-mobile-web-app-title" content="Flutter Conference India 2020">
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
 
   <!-- Favicon -->
