--- a/web/index.html
+++ b/web/index.html
@@ -3,7 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
-  <meta name="description" content="This is a New Website of Flutter India Conference 2020.FlutterCon India is an online event driven by Indian Flutter Communities to gather all Flutter passionates and learn to create beautiful apps! Our goal is to share Flutter knowledge, improve Flutter skills, and expand the Flutter community.  The 1st edition of FlutterCon India will take place on May 1-3, 2020.  Best-in-class speakers from Flutter community around the globe will be presenting live on various Flutter topics.">
+  <meta name="description" content="This is a Website of Flutter India Conference 2020.FlutterCon India is an online event driven by Indian Flutter Communities to gather all Flutter passionates and learn to create beautiful apps! Our goal is to share Flutter knowledge, improve Flutter skills, and expand the Flutter community.  The 1st edition of FlutterCon India will take place on May 1-3, 2020.  Best-in-class speakers from Flutter community around the globe will be presenting live on various Flutter topics.">
+  <meta name="keywords" content="Flutter,Flutter India,India, Flutter Web,flutter india,flutter,flutter web,conference,virtual conference,">
+  <meta name="tags" content="Flutter,Flutter India,India,flutter,india, flutter india,flutter web">
 
   <!-- iOS meta tags & icons -->
   <meta name="apple-mobile-web-app-capable" content="yes">
@@ -14,7 +16,7 @@
   <!-- Favicon -->
   <link rel="shortcut icon" type="image/png" href="favicon.png"/>
 
-  <title>fluttercon</title>
+  <title>Flutter Conference India 2020</title>
   <link rel="manifest" href="manifest.json">
 </head>
 <body>
